--- a/_config.yml
+++ b/_config.yml
@@ -1,86 +1,32 @@
+# Welcome to Jekyll!
 #
-# This file contains configuration flags to customize your site
-#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# Name of your site (displayed in the header)
-name: Victor Fondevilla
+# Site settings
+title: Memories from an Platform Architect
+email: victor.fondevilla@gmail.com
+description: > # this means to ignore newlines until "baseurl:"
+  Here I'll blog about random stuff like DevOps, Infrastructure, Kubernetes, NSX-T, VMware vSphere, Openstack...
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://www.victorfondevilla.com" # the base hostname & protocol for your site
+twitter_username: vFondevilla
+github_username:  vFondevilla
+clarity_header_iconshape: dna
+google_analytics:
+disqus_shortname: 
 
-# Short bio or description (displayed in the header)
-description: Platform Architect & Cloud Lover
+plugins:
+  - jekyll-mentions
+  - jekyll-gist
+  - jekyll-sitemap
+  - jekyll-avatar
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# Build settings
+markdown: kramdown
 
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email: vf@victorfondevilla.com
-  facebook:
-  flickr:
-  github: vfondevilla
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: vfondevilla
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-2865935-4
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: http://www.victorfondevilla.com
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: "/vfondevilla.github.io"
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
-
-permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.2.0
-
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
-# Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
+exclude: ['node_modules','package.json','.settings','.project','about_english.md']
+compress_html:
+  blanklines: true
