--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -10,8 +10,8 @@ title: Cloud-ish ramblings
 email: victor.fondevilla@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Here I'll blog about random stuff like DevOps, Infrastructure, AWS...
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.victorfondevilla.com" # the base hostname & protocol for your site
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://fondevilla.io" # the base hostname & protocol for your site
 twitter_username: vFondevilla
 github_username:  vFondevilla
 clarity_header_iconshape: dna
